--- a/css/styles.css
+++ b/css/styles.css
@@ -41,7 +41,7 @@ html {
 
 body,
 p {
-  color: #787976;
+  color:#1C84C5
   font: 400 1rem/1.5625rem 'Open Sans', sans-serif;
 }
 
@@ -97,17 +97,17 @@ h6 {
 }
 
 a {
-  color: #787976;
+  color:#1C84C5
   text-decoration: underline;
 }
 
 a:hover {
-  color: #787976;
+  color:#1C84C5
   text-decoration: underline;
 }
 
 a.green {
-  color: #14bf98;
+  color: #1c84c5;
 }
 
 a.white,
@@ -128,16 +128,16 @@ strong {
 }
 
 .section-title {
-  color: #14bf98;
+  color: #1c84c5;
   font: 500 0.8125rem/1.125rem 'Montserrat', sans-serif;
 }
 
 .btn-solid-reg {
   display: inline-block;
   padding: 1.1875rem 1.875rem 1.1875rem 1.875rem;
-  border: 0.125rem solid #14bf98;
+  border: 0.125rem solid#1C84C5;
   border-radius: 0.25rem;
-  background-color: #14bf98;
+  background-color: #1c84c5;
   color: #fff;
   font: 700 0.75rem/0 'Montserrat', sans-serif;
   text-decoration: none;
@@ -146,16 +146,16 @@ strong {
 
 .btn-solid-reg:hover {
   background-color: transparent;
-  color: #14bf98;
+  color: #1c84c5;
   text-decoration: none;
 }
 
 .btn-solid-lg {
   display: inline-block;
   padding: 1.375rem 2.125rem 1.375rem 2.125rem;
-  border: 0.125rem solid #281766;
+  border: 0.125rem solid#1e94dd;
   border-radius: 0.25rem;
-  background-color: #281766;
+  background-color: #1e94dd;
   color: #fff;
   font: 700 0.75rem/0 'Montserrat', sans-serif;
   text-decoration: none;
@@ -164,24 +164,24 @@ strong {
 
 .btn-solid-lg:hover {
   background-color: #000;
-  color: #281766;
+  color: #1e94dd;
   text-decoration: none;
 }
 
 .btn-outline-reg {
   display: inline-block;
   padding: 1.1875rem 1.875rem 1.1875rem 1.875rem;
-  border: 0.125rem solid #787976;
+  border: 0.125rem solid#1C84C5
   border-radius: 0.25rem;
   background-color: transparent;
-  color: #787976;
+  color:#1C84C5
   font: 700 0.75rem/0 'Montserrat', sans-serif;
   text-decoration: none;
   transition: all 0.2s;
 }
 
 .btn-outline-reg:hover {
-  background-color: #787976;
+  background-color:#1C84C5
   color: #fff;
   text-decoration: none;
 }
@@ -189,17 +189,17 @@ strong {
 .btn-outline-lg {
   display: inline-block;
   padding: 1.375rem 2.125rem 1.375rem 2.125rem;
-  border: 0.125rem solid #787976;
+  border: 0.125rem solid#1C84C5
   border-radius: 0.25rem;
   background-color: transparent;
-  color: #787976;
+  color:#1C84C5
   font: 700 0.75rem/0 'Montserrat', sans-serif;
   text-decoration: none;
   transition: all 0.2s;
 }
 
 .btn-outline-lg:hover {
-  background-color: #787976;
+  background-color:#1C84C5
   color: #fff;
   text-decoration: none;
 }
@@ -207,17 +207,17 @@ strong {
 .btn-outline-sm {
   display: inline-block;
   padding: 1rem 1.625rem 0.9375rem 1.625rem;
-  border: 0.125rem solid #787976;
+  border: 0.125rem solid#1C84C5
   border-radius: 0.25rem;
   background-color: transparent;
-  color: #787976;
+  color:#1C84C5
   font: 700 0.75rem/0 'Montserrat', sans-serif;
   text-decoration: none;
   transition: all 0.2s;
 }
 
 .btn-outline-sm:hover {
-  background-color: #787976;
+  background-color:#1C84C5
   color: #fff;
   text-decoration: none;
 }
@@ -239,7 +239,7 @@ strong {
   position: absolute;
   top: 0.8125rem;
   left: 1.375rem;
-  color: #787976;
+  color:#1C84C5
   opacity: 1;
   font: 400 0.875rem/1.375rem 'Open Sans', sans-serif;
   cursor: text;
@@ -274,7 +274,7 @@ strong {
   border: 1px solid #dadada;
   border-radius: 0.25rem;
   background-color: #fff;
-  color: #787976;
+  color:#1C84C5
   font: 400 0.875rem/1.375rem 'Open Sans', sans-serif;
   transition: all 0.2s;
   -webkit-appearance: none; /* removes inner shadow on form inputs on ios safari */
@@ -329,7 +329,7 @@ select::-ms-expand {
   border: 1px solid #dadada;
   border-radius: 0.25rem;
   background-color: #fff;
-  color: #787976;
+  color:#1C84C5
   font: 400 1rem/1.5625rem 'Open Sans', sans-serif;
   transition: all 0.2s;
 }
@@ -344,7 +344,7 @@ select::-ms-expand {
 .form-control-input:hover,
 .form-control-select:hover,
 .form-control-textarea:hover {
-  border: 1px solid #a1a1a1;
+  border: 1px solid #1C84C5;
 }
 
 .checkbox {
@@ -379,7 +379,7 @@ input[type='checkbox'] {
 
 .form-control-submit-button:hover {
   background-color: transparent;
-  color: #14bf98;
+  color: #1c84c5;
 }
 
 /* Form Success And Error Message Formatting */
@@ -396,7 +396,7 @@ input[type='checkbox'] {
 }
 
 .help-block.with-errors .list-unstyled {
-  color: #787976;
+  color:#1C84C5
   font-size: 0.75rem;
   line-height: 1.125rem;
   text-align: left;
@@ -589,7 +589,7 @@ input[type='checkbox'] {
   right: 0;
   bottom: 0;
   left: 0;
-  background: #281766;
+  background: #1e94dd;
 }
 
 .spinner {
@@ -655,7 +655,7 @@ input[type='checkbox'] {
 .navbar-custom {
   padding-top: 0.375rem;
   padding-bottom: 0.375rem;
-  background-color: #281766;
+  background-color: #1e94dd;
   box-shadow: 0 0.0625rem 0.375rem 0 rgba(0, 0, 0, 0.1);
   font: 600 0.875rem/0.875rem 'Open Sans', sans-serif;
   transition: all 0.2s;
@@ -722,7 +722,7 @@ input[type='checkbox'] {
   margin-top: 0;
   border: none;
   border-radius: 0.25rem;
-  background-color: #281766;
+  background-color: #1e94dd;
 }
 
 .navbar-custom .dropdown-item {
@@ -731,7 +731,7 @@ input[type='checkbox'] {
 }
 
 .navbar-custom .dropdown-item:hover {
-  background-color: #281766;
+  background-color: #1e94dd;
 }
 
 .navbar-custom .dropdown-item .item-text {
@@ -739,7 +739,7 @@ input[type='checkbox'] {
 }
 
 .navbar-custom .dropdown-item:hover .item-text {
-  color: #14bf98;
+  color: #1c84c5;
 }
 
 .navbar-custom .dropdown-items-divide-hr {
@@ -800,6 +800,7 @@ input[type='checkbox'] {
   padding-top: 6rem;
   padding-bottom: 5.125rem;
   text-align: center;
+  margin-top: 5rem;
 }
 
 .header .text-container {
@@ -978,7 +979,7 @@ hr .thick-line {
 }
 
 .cards-2 .price span {
-  color: #14bf98;
+  color: #1c84c5;
 }
 
 .cards-2 .button-container {
@@ -1025,9 +1026,9 @@ hr .thick-line {
   width: 2.25rem;
   height: 2.25rem;
   margin-right: 0.875rem;
-  border: 0.125rem solid #14bf98;
+  border: 0.125rem solid#1C84C5;
   border-radius: 50%;
-  background-color: #14bf98;
+  background-color: #1c84c5;
   color: #fff;
   font: 700 1rem/2.125rem 'Montserrat', sans-serif;
   text-align: center;
@@ -1043,8 +1044,8 @@ hr .thick-line {
 }
 
 .accordion .item:hover span[aria-expanded='false'] .circle-numbering {
-  border: 0.125rem solid #14bf98;
-  color: #14bf98;
+  border: 0.125rem solid#1C84C5;
+  color: #1c84c5;
 }
 
 .accordion .accordion-title {
@@ -1060,11 +1061,11 @@ hr .thick-line {
 }
 
 .accordion .item:hover .accordion-title {
-  color: #14bf98;
+  color: #1c84c5;
 }
 
 .accordion span[aria-expanded='true'] .accordion-title {
-  color: #14bf98;
+  color: #1c84c5;
 }
 
 .accordion .accordion-body {
@@ -1102,7 +1103,7 @@ hr .thick-line {
 
 .tabs .nav-link:hover,
 .tabs .nav-link.active {
-  color: #14bf98;
+  color: #1c84c5;
 }
 
 .tabs .nav-link .fas {
@@ -1138,7 +1139,7 @@ hr .thick-line {
   display: block;
   padding-left: 1.5rem;
   border-radius: 0.125rem;
-  background: linear-gradient(to bottom right, #14bf98, #1bd1a7);
+  background: linear-gradient(to bottom right, #1c84c5, #1bd1a7);
 }
 
 .tabs #tab-1 .progress-bar.first {
@@ -1168,7 +1169,7 @@ hr .thick-line {
 }
 
 .tabs #tab-2 .list-unstyled .media-bullet {
-  color: #14bf98;
+  color: #1c84c5;
   font-weight: 600;
   font-size: 2rem;
   line-height: 2rem;
@@ -1273,7 +1274,7 @@ hr .thick-line {
 .form-1 {
   padding-top: 1rem;
   padding-bottom: 3rem;
-  background-color: #281766;
+  background-color: #1e94dd;
 }
 
 .form-1 .text-container {
@@ -1379,7 +1380,7 @@ h4 {
 }
 
 .filter .button-group a:hover {
-  background-color: #14bf98;
+  background-color: #1c84c5;
   color: #fff;
 }
 
@@ -1465,7 +1466,7 @@ h4 {
   margin-bottom: 0.625rem;
   margin-left: 0;
   border: none;
-  background-color: #14bf98;
+  background-color: #1c84c5;
 }
 
 .lightbox-basic h6 {
@@ -1604,7 +1605,7 @@ h4 {
 .counter {
   padding-top: 6.875rem;
   padding-bottom: 3.875rem;
-  background-color: #281766;
+  background-color: #1e94dd;
   color: white;
 }
 
@@ -1736,7 +1737,7 @@ h4 {
 }
 
 .form-2 .fa-stack:hover .fa-stack-1x {
-  color: #14bf98;
+  color: #1c84c5;
 }
 
 /**********************/
@@ -1768,7 +1769,7 @@ h4 {
 .copyright {
   padding-top: 1rem;
   padding-bottom: 0.5rem;
-  background-color: #281766;
+  background-color: #1e94dd;
   text-align: center;
 }
 
@@ -1790,13 +1791,13 @@ a.back-to-top {
   width: 2.625rem;
   height: 2.625rem;
   border-radius: 1.875rem;
-  background: #14bf98 url('../images/up-arrow.png') no-repeat center 47%;
+  background: #1c84c5 url('../images/up-arrow.png') no-repeat center 47%;
   background-size: 1.125rem 1.125rem;
   text-indent: -9999px;
 }
 
 a:hover.back-to-top {
-  background-color: #13aa87;
+  background-color: #1C84C5;
 }
 
 /***************************/
@@ -1870,9 +1871,10 @@ a:hover.back-to-top {
 @media (min-width: 768px) {
   /* General Styles */
   .p-heading {
-    width: 85%;
+    width: 100%;
     margin-right: auto;
     margin-left: auto;
+    padding-top: 3rem;
   }
   /* end of general styles */
 
@@ -1898,13 +1900,13 @@ a:hover.back-to-top {
 
   .navbar-custom .nav-item .nav-link:hover,
   .navbar-custom .nav-item .nav-link.active {
-    color: #14bf98;
+    color: #1c84c5;
   }
 
   .navbar-custom.top-nav-collapse {
     padding: 0.375rem 1.5rem 0.375rem 2rem;
     box-shadow: 0 0.0625rem 0.375rem 0 rgba(0, 0, 0, 0.1);
-    background-color: #281766;
+    background-color: #1e94dd;
   }
 
   .navbar-custom.top-nav-collapse .navbar-brand.logo-text {
@@ -1917,7 +1919,7 @@ a:hover.back-to-top {
 
   .navbar-custom.top-nav-collapse .nav-item .nav-link:hover,
   .navbar-custom.top-nav-collapse .nav-item .nav-link.active {
-    color: #14bf98;
+    color: #9096f0;
   }
 
   .navbar-custom .dropdown-menu {
@@ -1946,11 +1948,15 @@ a:hover.back-to-top {
   .header .header-content {
     padding-top: 5rem;
     padding-bottom: 6rem;
+    margin-top: 2rem;
   }
 
   .header h1 {
     font: 700 3.5rem/4rem 'Montserrat', sans-serif;
-    margin-top: auto;
+    margin-top: 2rem;
+  }
+  .header .text-container {
+    margin-top: 2rem;
   }
   /* end of header */
 
@@ -2079,7 +2085,7 @@ a:hover.back-to-top {
   }
 
   .navbar-custom .fa-stack:hover .fa-stack-1x {
-    color: #14bf98;
+    color: #1c84c5;
   }
   /* end of navigation */
 
@@ -2709,7 +2715,7 @@ li {
 
 .fa-twitter:hover,
 .fa-twitter:focus {
-  color: #1da1f2;
+  color: #1e94dd;
   transform: scale(1.1);
 }
 
@@ -2830,3 +2836,461 @@ li {
   color: black;
   text-decoration: none;
 }
+
+
+
+
+
+.mini {
+  min-height: 215px;
+  overflow: hidden;
+  position: relative;
+  padding-top: 90px;
+  padding-bottom: 90px;
+}
+
+
+.mini:before {
+  content: '';
+  position: absolute;
+  width: 140%;
+  height: 140%;
+  opacity: 0.95;
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: center center;
+  background:black;
+  z-index: 2;
+  top: -20%;
+  left: -20%;
+}
+
+.mini .mini-content {
+  position: relative;
+  z-index: 3;
+}
+
+.info-form {
+  text-align: center;
+  color: #fff;
+  padding: -20px;
+}
+
+.mini .mini-content .info {
+  text-align: center;
+  color: #fff;
+  padding-top: 20px;
+  padding-bottom: 20px;
+}
+
+.mini .mini-content .info small {
+  display: block;
+  font-weight: 400;
+  font-size: 13px;
+  margin-bottom: 5px;
+}
+
+.mini .mini-content .info strong {
+  font-weight: 700;
+  font-size: 17px;
+  margin-bottom: 40px;
+  display: block;
+}
+
+.mini .mini-content .info h1 {
+  color: #fff;
+  font-weight: 500;
+  font-size: 28px;
+  letter-spacing: 0.25px;
+  margin-bottom: 30px;
+}
+
+.mini .mini-content .info p {
+  letter-spacing: 1px;
+  margin-bottom: 40px;
+  color: #fff;
+  letter-spacing: 0.25px;
+  line-height: 26px;
+  font-weight: 400;
+  font-size: 15px;
+}
+
+.mini .mini-content .info p span {
+  text-decoration: underline;
+}
+
+.mini .mini-content .mini-box1 {
+  display: block;
+  padding: 20px;
+  border-radius: 20px;
+  box-shadow: 0 2px 48px 0 rgba(0, 0, 0, 0.08);
+  background-image: url('https://www.thegrandtheatre.com/sites/default/files/2020-02/Birthday_MobileBanner.jpg');
+  background-size: 100% auto;
+  margin-bottom: 30px;
+  position: relative;
+  -webkit-transition: all 0.3s ease 0s;
+  -moz-transition: all 0.3s ease 0s;
+  -o-transition: all 0.3s ease 0s;
+  transition: all 0.3s ease 0s;
+  text-align: center;
+}
+
+.mini .mini-content .mini-box1:hover {
+  margin-top: -10px;
+}
+
+.mini .mini-content .mini-box1:before {
+  content: '';
+  position: absolute;
+  z-index: -1;
+  background: #fff;
+  width: 100%;
+  opacity: 0.15;
+  height: 100%;
+  bottom: -10px;
+  left: 0px;
+  right: -20px;
+  margin: auto;
+  border-radius: 20px;
+}
+
+.mini .mini-content .mini-box1 i {
+  display: block;
+  font-size: 20px;
+  margin-bottom: 15px;
+}
+
+.mini .mini-content .mini-box1 span {
+  display: block;
+  font-weight: 400;
+  font-size: 14px;
+  color: white;
+  letter-spacing: 0.75px;
+}
+
+.mini .mini-content .mini-box1 strong {
+  display: block;
+  font-weight: 400;
+  font-size: 17px;
+  color:  white;
+  letter-spacing: 0.25px;
+  margin-bottom: 5px;
+  margin-top: 20px;
+}
+
+
+
+
+
+.mini .mini-content .mini-box2 {
+  display: block;
+  padding: 20px;
+  border-radius: 20px;
+  box-shadow: 0 2px 48px 0 rgba(0, 0, 0, 0.08);
+  background-image: url('https://1fpypn35pt1l3uwyne14018c-wpengine.netdna-ssl.com/wp-content/uploads/2015/05/IMG_0533-1.jpg');
+  background-size: 100% auto;
+  margin-bottom: 30px;
+  position: relative;
+  -webkit-transition: all 0.3s ease 0s;
+  -moz-transition: all 0.3s ease 0s;
+  -o-transition: all 0.3s ease 0s;
+  transition: all 0.3s ease 0s;
+  text-align: center;
+}
+
+.mini .mini-content .mini-box2:hover {
+  margin-top: -10px;
+}
+
+.mini .mini-content .mini-box2:before {
+  content: '';
+  position: absolute;
+  z-index: -1;
+  background: #fff;
+  width: 100%;
+  opacity: 0.15;
+  height: 100%;
+  bottom: -10px;
+  left: 0px;
+  right: -20px;
+  margin: auto;
+  border-radius: 20px;
+}
+
+.mini .mini-content .mini-box2 i {
+  display: block;
+  font-size: 20px;
+  margin-bottom: 15px;
+}
+
+.mini .mini-content .mini-box2 span {
+  display: block;
+  font-weight: 400;
+  font-size: 14px;
+  color: white;
+  letter-spacing: 0.75px;
+}
+
+.mini .mini-content .mini-box2 strong {
+  display: block;
+  font-weight: 400;
+  font-size: 17px;
+  color:  white;
+  letter-spacing: 0.25px;
+  margin-bottom: 5px;
+  margin-top: 20px;
+}
+
+
+
+
+
+.mini .mini-content .mini-box3 {
+  display: block;
+  padding: 20px;
+  border-radius: 20px;
+  box-shadow: 0 2px 48px 0 rgba(0, 0, 0, 0.08);
+  background-image: url('https://www.oyorooms.com/blog/wp-content/uploads/2018/02/smoke-bombs-1.jpg');
+  background-size: 100% auto;
+  margin-bottom: 30px;
+  position: relative;
+  -webkit-transition: all 0.3s ease 0s;
+  -moz-transition: all 0.3s ease 0s;
+  -o-transition: all 0.3s ease 0s;
+  transition: all 0.3s ease 0s;
+  text-align: center;
+}
+
+.mini .mini-content .mini-box3:hover {
+  margin-top: -10px;
+}
+
+.mini .mini-content .mini-box3:before {
+  content: '';
+  position: absolute;
+  z-index: -1;
+  background: #fff;
+  width: 100%;
+  opacity: 0.15;
+  height: 100%;
+  bottom: -10px;
+  left: 0px;
+  right: -20px;
+  margin: auto;
+  border-radius: 20px;
+}
+
+.mini .mini-content .mini-box3 i {
+  display: block;
+  font-size: 20px;
+  margin-bottom: 15px;
+}
+
+.mini .mini-content .mini-box3 span {
+  display: block;
+  font-weight: 400;
+  font-size: 14px;
+  color:  white;
+  letter-spacing: 0.75px;
+}
+
+.mini .mini-content .mini-box3 strong {
+  display: block;
+  font-weight: 400;
+  font-size: 17px;
+  color:  white;
+  letter-spacing: 0.25px;
+  margin-bottom: 5px;
+  margin-top: 20px;
+}
+
+
+
+
+.mini .mini-content .mini-box4 {
+  display: block;
+  padding: 20px;
+  border-radius: 20px;
+  box-shadow: 0 2px 48px 0 rgba(0, 0, 0, 0.08);
+  background-image: url('https://lh3.googleusercontent.com/proxy/-IQkNSKTpy1dyD2Ux6mYLCKo-qYa4ma1CXppl-8ixjrtFWyt6p9NhHEvJ3t2ev6Vk1Mk2FS1JO8PlwmmcUq5o1QfGTE1bqUrFMsYCPUn3iOXItungK38Cy_dXHwVX9BIYQxmqpACgiRqIYDcMsLHln6BryxfEgvdwRU');
+  margin-bottom: 30px;
+  background-size: 100% auto;
+  position: relative;
+  -webkit-transition: all 0.3s ease 0s;
+  -moz-transition: all 0.3s ease 0s;
+  -o-transition: all 0.3s ease 0s;
+  transition: all 0.3s ease 0s;
+  text-align: center;
+}
+
+.mini .mini-content .mini-box4:hover {
+  margin-top: -10px;
+}
+
+.mini .mini-content .mini-box4:before {
+  content: '';
+  position: absolute;
+  z-index: -1;
+  background: #fff;
+  width: 100%;
+  opacity: 0.15;
+  height: 100%;
+  bottom: -10px;
+  left: 0px;
+  right: -20px;
+  margin: auto;
+  border-radius: 20px;
+}
+
+.mini .mini-content .mini-box4 i {
+  display: block;
+  font-size: 20px;
+  margin-bottom: 15px;
+}
+
+.mini .mini-content .mini-box4 span {
+  display: block;
+  font-weight: 400;
+  font-size: 14px;
+  color:  white;
+  letter-spacing: 0.75px;
+}
+
+.mini .mini-content .mini-box4 strong {
+  display: block;
+  font-weight: 400;
+  font-size: 17px;
+  color:  white;
+  letter-spacing: 0.25px;
+  margin-bottom: 5px;
+  margin-top: 20px;
+}
+
+
+
+
+.mini .mini-content .mini-box5 {
+  display: block;
+  padding: 20px;
+  border-radius: 20px;
+  box-shadow: 0 2px 48px 0 rgba(0, 0, 0, 0.08);
+  background-image: url('https://akm-img-a-in.tosshub.com/indiatoday/images/story/201211/party_660_110212060811.jpg');
+  background-size: 100% auto;
+  margin-bottom: 30px;
+  position: relative;
+  -webkit-transition: all 0.3s ease 0s;
+  -moz-transition: all 0.3s ease 0s;
+  -o-transition: all 0.3s ease 0s;
+  transition: all 0.3s ease 0s;
+  text-align: center;
+}
+
+.mini .mini-content .mini-box5:hover {
+  margin-top: -10px;
+}
+
+.mini .mini-content .mini-box5:before {
+  content: '';
+  position: absolute;
+  z-index: -1;
+  background: #fff;
+  width: 100%;
+  opacity: 0.15;
+  height: 100%;
+  bottom: -10px;
+  left: 0px;
+  right: -20px;
+  margin: auto;
+  border-radius: 20px;
+}
+
+.mini .mini-content .mini-box5 i {
+  display: block;
+  font-size: 20px;
+  margin-bottom: 15px;
+}
+
+.mini .mini-content .mini-box5 span {
+  display: block;
+  font-weight: 400;
+  font-size: 14px;
+  color:  white;
+  letter-spacing: 0.75px;
+}
+
+.mini .mini-content .mini-box5 strong {
+  display: block;
+  font-weight: 400;
+  font-size: 17px;
+  color: white;
+  letter-spacing: 0.25px;
+  margin-bottom: 5px;
+  margin-top: 20px;
+}
+
+
+
+
+.mini .mini-content .mini-box6 {
+  display: block;
+  padding: 20px;
+  border-radius: 20px;
+  box-shadow: 0 2px 48px 0 rgba(0, 0, 0, 0.08);
+  background-image: url('https://blog.venuelook.com/wp-content/uploads/2019/10/kitty-party-feature-660x330.jpg');
+  background-size: 100% auto;
+  margin-bottom: 30px;
+  position: relative;
+  -webkit-transition: all 0.3s ease 0s;
+  -moz-transition: all 0.3s ease 0s;
+  -o-transition: all 0.3s ease 0s;
+  transition: all 0.3s ease 0s;
+  text-align: center;
+}
+
+.mini .mini-content .mini-box6:hover {
+  margin-top: -10px;
+}
+
+.mini .mini-content .mini-box6:before {
+  content: '';
+  position: absolute;
+  z-index: -1;
+  background: #fff;
+  width: 100%;
+  opacity: 0.15;
+  height: 100%;
+  bottom: -10px;
+  left: 0px;
+  right: -20px;
+  margin: auto;
+  border-radius: 20px;
+}
+
+.mini .mini-content .mini-box6 i {
+  display: block;
+  font-size: 20px;
+  margin-bottom: 15px;
+}
+
+.mini .mini-content .mini-box6 span {
+  display: block;
+  font-weight: 400;
+  font-size: 14px;
+  color:  white;
+  letter-spacing: 0.75px;
+}
+
+.mini .mini-content .mini-box6 strong {
+  display: block;
+  font-weight: 400;
+  font-size: 17px;
+  color:  white;
+  letter-spacing: 0.25px;
+  margin-bottom: 5px;
+  margin-top: 20px;
+}
+
+
+
+
+
